Upped 11ty version and restructured styles towards css only

--- a/src/about.njk
+++ b/src/about.njk
@@ -60,6 +60,18 @@ sitemap:
 </div>
 
 <div class="content">
+  <ul>
+    <li>Languages</li>
+    <li>Friends</li>
+    <li>Reading</li>
+    <li>Watching</li>
+    <li>Essentials</li>
+    <li>Philosophy</li>
+    <li>Techstack</li>
+  </ul>
+</div>
+
+<div class="content">
   <h2>Now...</h2>
 
   <ul>
