--- a/src/assets/stylesheets/_tooltip.css
+++ b/src/assets/stylesheets/_tooltip.css
@@ -7,7 +7,7 @@
   &:before {
     content: attr(data-text);
     position: absolute;
-    // display: none;
+    /* display: none; */
     background-color: var(--c-elevation-1);
     z-index: 50;
     top: 0;
@@ -28,7 +28,7 @@
   
   &:hover {
     &:before {
-      // display: block;
+      /* display: block; */
       opacity: 1;
     }
   }
