--- a/src/assets/stylesheets/_fonts.css
+++ b/src/assets/stylesheets/_fonts.css
@@ -3,19 +3,26 @@
  * Noto Serif JP: 400, 700, 900
  * Ubuntu Mono: 400
  */
- @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;400;700;900&family=Noto+Serif+JP:wght@400;700;900&family=Ubuntu+Mono&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;400;700;900&family=Noto+Serif+JP:wght@400;700;900&family=Ubuntu+Mono&display=swap'); */
+
+/**
+ * Rubik: 300, 400, 500, 600, 700, 800, 900
+ */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 /*
  * aoyagireisyosimo2
  */
 @font-face {
-    font-family: 'aoyagireisyosimo2';
-    src: url('../fonts/aoyagireisyosimo/aoyagireisyosimo2.eot');
-    src: url('../fonts/aoyagireisyosimo/aoyagireisyosimo2.woff2') format('woff2'),
-        url('../fonts/aoyagireisyosimo/aoyagireisyosimo2.woff') format('woff'),
-        url('../fonts/aoyagireisyosimo/aoyagireisyosimo_ttf_2_01.ttf') format('truetype'),
-        url('../fonts/aoyagireisyosimo/aoyagireisyosimo2.svg#aoyagireisyosimo2') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'aoyagireisyosimo2';
+  src: url('../fonts/aoyagireisyosimo/aoyagireisyosimo2.eot');
+  src: url('../fonts/aoyagireisyosimo/aoyagireisyosimo2.woff2') format('woff2'),
+    url('../fonts/aoyagireisyosimo/aoyagireisyosimo2.woff') format('woff'),
+    url('../fonts/aoyagireisyosimo/aoyagireisyosimo_ttf_2_01.ttf')
+      format('truetype'),
+    url('../fonts/aoyagireisyosimo/aoyagireisyosimo2.svg#aoyagireisyosimo2')
+      format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
