Prettier and eslint

--- a/src/assets/stylesheets/styles.njk
+++ b/src/assets/stylesheets/styles.njk
@@ -16,6 +16,7 @@ layout: null
 {% include './_grid.css' %}
 {% include './_hobby.css' %}
 {% include './_hub.css' %}
+{% include './_icons.css' %}
 {% include './_japanese.css' %}
 {% include './_navigation.css' %}
 {% include './_pagination.css' %}
