--- a/src/beacons.njk
+++ b/src/beacons.njk
@@ -1,12 +1,11 @@
 ---
 title: Beacons
 topbar: false
-include_fontawesome: true
 ---
 
 <div class="beacons">
     <div class="beacons__box">
-        <a href="https://twitch.tv/4lienb0y" class="beacons__beacon"><span class="fa-brands fa-twitch" style="--color:#6441A4"></span> @4lienb0y</a>
+        <a href="https://twitch.tv/4lienb0y" class="beacons__beacon"><span class="icon icon--twitch" style="--color:#6441A4"></span> @4lienb0y</a>
         <a href="https://instagram.com/maxvowinkel" class="beacons__beacon beacons__beacon--highlight"><span class="fa-brands fa-instagram" style="--color:#E1306C"></span> @maxvowinkel</a>
         <a href="https://x.com/MyXoToD" class="beacons__beacon"><span class="fa-brands fa-x-twitter"></span> @MyXoToD</a>
         <a href="https://www.youtube.com/user/MyXoToD" class="beacons__beacon"><span class="fa-brands fa-youtube" style="--color:#FF0000"></span> @MyXoToD</a>
