--- a/src/assets/javascripts/furigana.njk
+++ b/src/assets/javascripts/furigana.njk
@@ -1,3 +1,8 @@
+---
+permalink: /assets/javascripts/furigana.min.js
+layout: null
+---
+
 export class Furigana {
   constructor(selectors = []) {
     this.selectors = selectors;
