--- a/src/assets/javascripts/theme.njk
+++ b/src/assets/javascripts/theme.njk
@@ -1,3 +1,8 @@
+---
+permalink: /assets/javascripts/theme.min.js
+layout: null
+---
+
 export class Theme {
   constructor() {
     this.theme = 'dark';
