--- a/src/assets/stylesheets/_variables.css
+++ b/src/assets/stylesheets/_variables.css
@@ -3,7 +3,7 @@
   --c-elevation-1: #23272f;
   /* --c-accent: #9f7c3c; */
   --c-accent: #ff4081;
-  --c-accent-2: #a940ff;
+  --c-accent-2: hsl(340, 100%, 73%);
   --c-copy: #f9fbff;
   --c-copy-rgb: 249, 251, 255;
 
