--- a/src/index.njk
+++ b/src/index.njk
@@ -1,26 +1,17 @@
 ---
 title: Maximilian Boll - Frontend Web-Developer - ようこそ
-topbar: false
 layout: base
 sitemap:
     priority: 1.0
 ---
 
-<div class="hub">
-    <div class="hub__col hub__col--wide">
-        <a href="{{ '/about/' | url }}" class="hub__link" data-kanji="1">About</a>
-        <a href="{{ '/hobbies/' | url }}" class="hub__link" data-kanji="2">Hobbies</a>
+<div class="content content--wide">
+    <div class="intro">
+        <div class="greetings">Hello</div>
+        <h1>Hi<span class="color-accent">!</span> I&rsquo;m Max<span class="color-accent">.</span></h1>
     </div>
-    <div class="hub__col">
-        <div class="hub__title"><div>マックス</div><span>.dev</span></div>
-    </div>
-    <div class="hub__col hub__col--wide">
-        <a href="{{ '/blog/' | url }}" class="hub__link" data-kanji="3">Blog</a>
-        <a href="{{ '/projects/' | url }}" class="hub__link" data-kanji="4">Projects</a>
-    </div>
-    
-    <div class="hub__kanji" data-kanji="1">私</div>
-    <div class="hub__kanji" data-kanji="2">趣</div>
-    <div class="hub__kanji" data-kanji="3">書</div>
-    <div class="hub__kanji" data-kanji="4">働</div>
+    <div>Sections with Big Kanji, like former hub</div>
+    <div>Overall Stats</div>
+    <div>Latest 3 posts</div>
+    <div>Buy me a coffee</div>
 </div>
