--- a/src/assets/javascripts/hub.njk
+++ b/src/assets/javascripts/hub.njk
@@ -1,3 +1,8 @@
+---
+permalink: /assets/javascripts/hub.min.js
+layout: null
+---
+
 export class Hub {
   constructor() {
     this.hub = document.querySelector('.hub');
