--- a/src/assets/stylesheets/styles.njk
+++ b/src/assets/stylesheets/styles.njk
@@ -8,10 +8,14 @@ layout: null
 {% include './_variables.css' %}
 {% include './_reset.css' %}
 {% include './_base.css' %}
+{% include './fontawesome/fontawesome.min.css' %}
+{% include './fontawesome/brands.min.css' %}
+{% include './fontawesome/solid.min.css' %}
 
 /* Components */
 {% include './_404.css' %}
 {% include './_beacons.css' %}
+{% include './_buttons.css' %}
 {% include './_footer.css' %}
 {% include './_grid.css' %}
 {% include './_hobby.css' %}
