--- a/src/index.njk
+++ b/src/index.njk
@@ -7,11 +7,104 @@ sitemap:
 
 <div class="content content--wide">
     <div class="intro">
-        <div class="greetings">Hello</div>
-        <h1>Hi<span class="color-accent">!</span> I&rsquo;m Max<span class="color-accent">.</span></h1>
+        <h1>
+            <span class="greetings"></span><span class="color-accent">,</span> 
+            I&rsquo;m Max<span class="color-accent">!</span><br>
+            Full<span class="color-accent">-</span>Stack Web<span class="color-accent">-</span>Developer
+        </h1>
     </div>
-    <div>Sections with Big Kanji, like former hub</div>
-    <div>Overall Stats</div>
-    <div>Latest 3 posts</div>
+    
+    <div class="grid">
+        <div class="grid__col grid__col-3">
+            <div class="area">
+                <div class="area__kanji">私</div>
+                <div class="area__label">about</div>
+            </div>
+        </div>
+        <div class="grid__col grid__col-3">
+            <div class="area">
+                <div class="area__kanji">書</div>
+                <div class="area__label">blog</div>
+            </div>
+        </div>
+        <div class="grid__col grid__col-3">
+            <div class="area">
+                <div class="area__kanji">趣</div>
+                <div class="area__label">hobbies</div>
+            </div>
+        </div>
+        <div class="grid__col grid__col-3">
+            <div class="area">
+                <div class="area__kanji">働</div>
+                <div class="area__label">projects</div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="content content--wide content--background">
+    <h2>Daily stats<span class="color-accent">.</span></h2>
+
+    <div class="grid">
+        <div class="grid__col grid__col-3">
+            <div class="stat">
+                <span class="fa-solid fa-music"></span>
+                <span class="stat__number" style="--statNumber:100"></span>
+                <span class="stat__label">Songs</span>
+            </div>
+        </div>
+        <div class="grid__col grid__col-3">
+            <div class="stat">
+                <span class="fa-solid fa-walking"></span>
+                <span class="stat__number" style="--statNumber:10000"></span>
+                <span class="stat__label">Steps</span>
+            </div>
+        </div>
+        <div class="grid__col grid__col-3">
+            <div class="stat">
+                <span class="fa-solid fa-coffee"></span>
+                <span class="stat__number" style="--statNumber:4"></span>
+                <span class="stat__label">Coffee</span>
+            </div>
+        </div>
+        <div class="grid__col grid__col-3">
+            <div class="stat">
+                <span class="fa-solid fa-code"></span>
+                <span class="stat__number" style="--statNumber:10"></span>
+                <span class="stat__label">Commits</span>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="content content--wide">
+    <h2>Recent Posts</h2>
+    <div class="grid">
+        {% for post in collections.blogLatest %}
+            {% if post.data.cover %}
+                {% set cover = post.url + post.data.cover %}
+            {% else %}
+                {% set cover = fallbackcover %}
+            {% endif %}
+            <div class="grid__col grid__col-4">
+                <a href="{{ post.url | url }}" class="blog-card">
+                    <div class="blog-card__image">
+                        <img src="{{ cover }}" alt="{{ post.data.title }}" />
+                    </div>
+                    <div class="blog-card__content">
+                        <h3 class="blog__card--title">{{ post.data.title }}</h3>
+                        <p>{{ post.data.excerpt }}</p>
+                        <div class="blog-card__meta">posted on {{ post.date | formatDateFull }}, {{ post.content | readingtime }}</div>
+                    </div>
+                </a>
+            </div>
+        {% endfor %}
+    </div>
+
+    <div class="centered" style="margin-top: 2rem;">
+        <a href="{{ '/blog' | url }}" class="button button--primary">More Posts</a>
+    </div>
+</div>
+
+<div class="content content--narrow">
+    <div>Webrings</div>
     <div>Buy me a coffee</div>
 </div>
