--- a/src/assets/stylesheets/_topbar.css
+++ b/src/assets/stylesheets/_topbar.css
@@ -5,7 +5,7 @@
   z-index: 100;
   width: 100%;
   height: var(--topbar-height);
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(1rem);
   display: grid;
   grid-template-columns: minmax(1rem, 1fr) minmax(auto, var(--max-content-width-wide)) minmax(1rem, 1fr);
   /* background-color: rgba(var(--c-copy-rgb), .01); */
