Adjusted site URLs

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -12,12 +12,12 @@
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.makkusu.dev/">
+    <meta property="og:url" content="{{ site.url }}">
     <meta property="og:site_name" content="makkusu.dev">
     <meta property="og:locale" content="en_US">
     <meta property="og:title" content="Maximilian Boll - Frontend Web-Developer">
     <meta property="og:description" content="{{ title }}">
-    <meta property="og:image" content="https://www.makkusu.dev/assets/images/avatar.jpg">
+    <meta property="og:image" content="{{ site.url }}/assets/images/avatar.jpg">
     <meta property="og:image:width" content="500">
     <meta property="og:image:height" content="500">
     <meta property="og:image:alt" content="Avatar of Maximilian Boll">
